--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ pyyaml>=6.0
 python-dotenv~=1.1.1
 sentence-transformers~=5.0.0
 protobuf~=5.29.5
+numpy~=2.3.2
+scikit-learn~=1.7.1
+pydantic~=2.11.7
 pytest~=8.4.1
